@@ -1,8 +1,8 @@
 package org.colorcoding.ibas.bobas.db;
 
 import java.sql.Connection;
-import java.util.HashMap;
 import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 
 import org.colorcoding.ibas.bobas.bo.BOFactory;
 import org.colorcoding.ibas.bobas.common.Strings;
@@ -33,7 +33,7 @@ public class DbFactory {
 		return instance;
 	}
 
-	private Map<String, DbAdapter> adapters = new HashMap<>(8);
+	private final Map<String, DbAdapter> adapters = new ConcurrentHashMap<>(8);
 
 	/**
 	 * 创建数据库适配器（按数据库类型名称，自动反射创建对应实现类）
@@ -42,7 +42,7 @@ public class DbFactory {
 	 * @return 数据库适配器实例
 	 * @throws Exception 适配器类不存在或无法实例化时抛出
 	 */
-	public DbAdapter createAdapter(String type) throws Exception {
+	public synchronized DbAdapter createAdapter(String type) throws Exception {
 		if (!this.adapters.containsKey(type)) {
 			String nameClass = Strings.concat(DbAdapter.class.getPackage().getName(), ".", type.toLowerCase(), ".",
 					DbAdapter.class.getSimpleName());
@@ -50,7 +50,7 @@ public class DbFactory {
 			if (adapterClass == null || !DbAdapter.class.isAssignableFrom(adapterClass)) {
 				throw new Exception(Strings.format("unavailable [%s].", nameClass));
 			}
-			this.adapters.put(type, (DbAdapter) adapterClass.newInstance());
+			this.adapters.put(type, (DbAdapter) adapterClass.getDeclaredConstructor().newInstance());
 		}
 		DbAdapter adapter = this.adapters.get(type);
 		if (adapter == null) {
@@ -70,7 +70,7 @@ public class DbFactory {
 	 * @return 数据库连接
 	 * @throws Exception 连接创建失败时抛出
 	 */
-	public Connection createConnection(String type, String server, String dbName, String userName, String userPwd)
+	public synchronized Connection createConnection(String type, String server, String dbName, String userName, String userPwd)
 			throws Exception {
 		DbAdapter adapter = createAdapter(type);
 		Connection connection = adapter.createConnection(server, dbName, userName, userPwd);
